--- a/style.css
+++ b/style.css
@@ -1,24 +1,21 @@
-*{
-font-family: Arial;    
-background-color: black; 
-color: white;
+html {
+    font-family: 'Montserrat', sans-serif;
+    background-color: rgba(0, 0, 0, 0.795); 
+    color: white;
+    padding: auto;
 }
 .banner {
     
 }
 
 .logo {
-    position: relative;
-    /* height="300px" width="300px" */
-    display:flex;
+    display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
-
-   
+    width: 50%;   
 }
-.about {
-    text-align: center;
+.text {
+    float: left;
 }
 .navbar ul li{ 
     text-align: center;
@@ -35,53 +32,42 @@ color: white;
     background-size: 50px;
     border-radius: 5px;
 }
+div {
+    font-size:large;
+    word-spacing: 10px;
+    line-height: 30px;
+    text-align: center;
+    margin: 40px;
+    padding: auto;
 
-.contact {
+}
+
+#about {
+    display: none;
+}
+#about:target {
+    display: block;
+}
+
+.me {
+    max-width: 300px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.contact ul li {
     list-style: none;
-    display: inline;
-    margin:auto;
+    display: inline-block;
     align-items:center;
+    justify-content: space-between;
+
+
 }
-.contact img {
-    padding: 5px;
-    max-height: 40px;
-    max-width: 40px;
-}
-
-
-
-/* 
-
-.navbar ul li{
+.contact ul li img {
     list-style: none;
-    display: inline-flex;
-    margin: 10px 20px;
-    size: 50px;
-    position: relative;
-    background: #ffee0018;
-    border-radius: 30px;
-    left: -10px;
+    max-width: 30px;
+    margin:auto;
     
 }
 
-.navbar ul li a {
-    text-decoration: none;
-    color: white;
-}
 
-.navbar ul li::after{
-    content: '';
-    height: 60px;
-    width: 0;
-    background: #ffee00c0;
-    position:absolute;
-    transition: .4s;
-    border-radius: 30px;
-    left: 0;
-}
-
-.navbar ul li:hover::after{
-    width: 100%;
-    height: 50px;
-    cursor:pointer ;
-} */
