--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     font-family: 'Montserrat', sans-serif;
-    background-color: rgba(0, 0, 0, 0.795); 
+    background-color: black; 
     color: white;
     padding: auto;
 }
